--- a/src/Components/Seats/Seats.css
+++ b/src/Components/Seats/Seats.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
 }
 
 .texto {
@@ -29,6 +30,8 @@
 .seat {
   width: 24px;
   height: 24px;
+  margin-left: 10px;
+  margin-bottom: 7px;
 
   background: #c3cfd9;
   border: 1px solid #808f9d;
@@ -36,6 +39,10 @@
 
   font-size: 11px;
   color: black;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .subtitle {
@@ -46,7 +53,6 @@
 }
 
 .subtitle div{
-  
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -55,13 +61,20 @@
   margin-bottom: 50px;
 }
 
-.subtitle p{
-  font-size: 13px;
-  margin-left: 0px;
+.subtitle div li{
+  width: 24px;
+  height: 24px;
+  margin-bottom: 7px;
+
+  border: 1px solid #808f9d;
+  border-radius: 12px;
+
+  font-size: 11px;
+  color: black;
 }
 
-.subtitle li{
-  margin-right: 0px;
+.subtitle p{
+  font-size: 13px;
 }
 
 .selected {
@@ -93,7 +106,7 @@
   font-size: 18px;
 }
 
-.button {
+.buttonSeats {
   width: 225px;
   height: 42px;
   margin-top: 50px;
