--- a/src/Components/Movie/Movie.css
+++ b/src/Components/Movie/Movie.css
@@ -1,34 +1,45 @@
 .texto {
   width: 100%;
-  height: 110px;
-  margin-top: 67px;
+  height: 90px;
+  background-color: #ffffff;
 
   font-size: 24px;
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 
-.day{
-    margin-top: 20px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    margin-left: 10px;
+.movieContainer {
+  margin-top: 157px;
+  margin-bottom: 120px;
+  overflow-y: auto;
 }
+
+.day {
+  margin-top: 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  margin-left: 10px;
+}
+
 .day h1 {
   font-size: 20px;
   margin-bottom: 15px;
 }
 
-.sections {
+.sessions {
   display: flex;
 }
 
-.section  {
+.day .sessions .session {
   width: 83px;
   height: 43px;
   background: #e8833a;
@@ -44,4 +55,5 @@
 
   font-size: 18px;
   color: #ffffff;
+  text-decoration: none;
 }
