--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,19 +1,25 @@
+.home {
+  margin-top: 67px; /* (67 + 20) */
 
-.home{
-    margin-top: 67px;/* (67 + 20) */
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.texto{
-    width: 100%;
-    height: 110px;
+.texto {
+  width: 100%;
+  height: 110px;
 
-    font-size: 24px;
+  font-size: 24px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.boxContainer {
+  width: 100vw;
+  height: 1px;
+  margin-bottom: 120px;
+  overflow-y: auto;
 }
