--- a/src/Components/Success/Success.css
+++ b/src/Components/Success/Success.css
@@ -1,6 +1,6 @@
 .texto {
     width: 100%;
-    height: 110px;
+    height: 90px;
     margin-top: 67px;
   
     font-size: 24px;
@@ -11,6 +11,15 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    position: fixed;
+    left:0;
+    top:0;
+  }
+
+  .succesMain{
+    margin-top: 200px;
+    margin-left: 15px;
   }
 
   .container{
@@ -26,10 +35,9 @@
     margin-bottom: 10px;
   }
 
-
-
   li div p{
     font-size: 22px;
+    margin-bottom: 5px;
   }
 
   .buttonSuccess {
@@ -47,5 +55,7 @@
   
     font-size: 18px;
     color: #ffffff;
+
+    cursor: pointer;
   }
   
